<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_prompt"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/whether_cancel_order"
        android:textColor="@color/black"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_order_in_48hours_free"
        android:textColor="@color/light_black"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_cancel_order_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/cancel_order_sure"
            android:textColor="@color/light_black"
            android:textSize="14sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray">
        </View>


        <TextView
            android:id="@+id/id_cancel_order_republish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/republish_order"
            android:textColor="@color/light_black"
            android:textSize="14sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray">
        </View>

        <TextView
            android:id="@+id/id_cancel_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/cancel_order_no"
            android:textColor="@color/light_black"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>
