<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#FFF"
              android:orientation="vertical">
    <com.kiun.modelcommonsupport.ui.views.NavigatorBar
        app:barNoback="true"
        app:barTitle="@string/personal_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/infoContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <com.kiun.modelcommonsupport.ui.views.ATextView
                app:dataPath="userName"
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户未登录"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="查看并编辑个人资料"
                android:textColor="@color/light_black"
                android:textSize="14sp"/>
        </LinearLayout>

        <com.kiun.modelcommonsupport.ui.views.AImageView
            app:radius="25dp"
            app:dataPath="headImg"
            android:id="@+id/userImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:src="@color/orange"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/owner_order"
                    android:textColor="@color/black"
                    android:textSize="17sp"/>

                <LinearLayout
                    android:id="@+id/txt_personal_all_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_order"
                        android:textColor="@color/light_black"
                        android:textSize="14sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="7dp"
                        android:src="@drawable/icon_next"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_personal_wait_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_wait"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_be_service"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/light_black"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_personal_wait_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_wallet_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_be_pay"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/light_black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_personal_wait_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/icon_evaluate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_be_evaluate"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/light_black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray">
    </View>

    <com.kiun.modelcommonsupport.ui.views.ACellView
        app:rightImage="@drawable/icon_address"
        app:leftTitle="@string/personal_address"
        app:activityClass="com.xzxx.decorate.o2o.ui.PersonalAddressActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <com.kiun.modelcommonsupport.ui.views.ACellView
        app:rightImage="@drawable/icon_set"
        app:leftTitle="@string/setting"
        app:activityClass="com.kiun.modelcommonsupport.controllers.authority.SettingActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <com.kiun.modelcommonsupport.ui.views.ACellView
        app:rightImage="@drawable/icon_ticket"
        app:leftTitle="@string/ticket"
        app:activityClass="com.xzxx.decorate.o2o.ui.PersonalCouponActivity"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</LinearLayout>
